# llm-tool-hub

./: README.md  pyproject.toml
docs/: MCP_FILE_STRUCTURE.md  MCP_FILE_STRUCTURE_SIMPLE.md  MCP_IMPLEMENTATION_COMPLETE.md  MCP_INTEGRATION_PLAN.md  SHELL_TOOL_TIMEOUT.md  UNPAYWALL_FULLTEXT_IMPLEMENTATION.md  shell_tool_timeout_mechanism.md
docs/manual/: 1.project_structure_and_setup.md  2.path_and_dependency_management.md
draft/: explore_unpaywall_api.py
example/: scientific_research_tool_example.py  usage_guide.ipynb
example/agent_blocks_hub/parallel_tool_agent/: 01_basic_usage.py  01_ideation_with_parallel_tool_agent.py
example/function_adapter/: 01_basic_usage.py  README.md
example/mcp/: 01_basic_stdio_server.py  02_simple_test.py  03_mcp_client.py  README.md
src/llm_tool_hub/: __init__.py  base_tool.py  tool_registry.py
src/llm_tool_hub.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/llm_tool_hub/filesystem_tool/: base_filesystem_tool.py  create_file_tool.py  modify_file_tool.py  read_file_tool.py
src/llm_tool_hub/integrations/: function_adapter.py  langchain_adapter.py  mcp_adapter.py  mcp_server.py  tool_registry.py
src/llm_tool_hub/scientific_research_tool/: __init__.py  search_semantic_scholar.py  search_unpaywall.py
src/llm_tool_hub/shell_tool/: shell_tool.py
src/llm_tool_hub/transports/: __init__.py  base_transport.py  stdio_transport.py
tests/: test_base.py
tests/filesystem_tool/: test_modify_file.py  test_read_file.py
tests/integrations/: test_function_adapter.py  test_mcp_adapter.py  test_mcp_server.py
tests/integretions/: test_langchain_adapter.py  test_tool_registry.py
tests/real_llm/: conftest.py
tests/real_llm/filesystem_tool/: test_create_file_llm.py  test_read_file_llm.py
tests/real_llm/shell_tool/: test_shell_tool_llm.py
tests/scientific_research_tool/: __init__.py  test_search_semantic_scholar.py  test_search_unpaywall.py
tests/shell_tool/: test_shell_tool.py
tests/transports/: __init__.py
(+1 files in other folders)
